Fixes #topbar bug where Ink link was overlapping the toggle button on the right.

--- a/less/docs.less
+++ b/less/docs.less
@@ -295,10 +295,6 @@ footer {
                 }
             }
 
-            &.show-medium, &.show-small {
-
-            }
-
             &.vertical {
 
                 li {
@@ -329,6 +325,11 @@ footer {
                             
                             font-size: 1.5em;
                         }
+                    }
+
+                    &.title {
+                        border-bottom: 1px solid lighten(@black,15%);
+                        a {border-bottom: none}
                     }
                     
                     &.active {
